--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,55 @@
-body {
-  margin: 0;
-  font-family: 'Outfit', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-::after,
-::before {
-  margin: 0;
-  padding: 0;
+* {
   box-sizing: border-box;
 }
 body {
   margin: 0;
-  font-family: "Rubik", sans-serif;
+  font-family: "Outfit", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8e7e7;
+}
+.centered {
+  margin: 3rem auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.focused {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+
+.btn {
+  text-decoration: none;
+  background-color: rgb(128, 0, 0);
+  color: white;
+  border-radius: 4px;
+  padding: 0.75rem 1.5rem;
+  border: 1px solid rgb(128, 0, 0);
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #ac1111;
+  border-color: #ac1111;
+}
+
+.btn--flat {
+  cursor: pointer;
+  font: inherit;
+  color: rgb(128, 0, 0);
+  border: none;
+  background-color: none;
+  text-decoration: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
+}
+
+.btn--flat:hover,
+.btn--flat:active {
+  background-color: rgb(128, 0, 0);
+  color: white;
 }
