--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -12,7 +12,12 @@
   font-size: 2rem;
   color: white;
 }
+.logo a {
+  text-decoration: none;
+  color: white;
+}
 .logoImg {
+  width: 80px;
 }
 
 .nav ul {
