--- a/src/components/reviews/ReviewItem.module.css
+++ b/src/components/reviews/ReviewItem.module.css
@@ -6,7 +6,7 @@
     align-items: flex-end;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 6px;
-    background-color: #c2e7f0;
+    background-color: #f0dac2;
   }
   
   .item:last-of-type {
@@ -23,7 +23,7 @@
     margin: 0;
     text-align: left;
     font-size: 1.5rem;
-    color: #212929;
+    color: #212529;
   }
   
   .item p {
